<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!-- Layout for the editor -->
    <LinearLayout
        android:id="@+id/edit_cookie"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/backgroundColorWithTransparency"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".EditCookie">

        <include layout="@layout/toolbar" />

        <!-- Cookie info category -->
        <TextView
            android:text="@string/cookie_info"
            style="@style/SectionLabelStyle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/margin_horizontal">

            <!-- Label -->
            <TextView
                android:text="@string/cookie_name"
                style="@style/CategoryStyle"/>

            <!-- Input fields -->
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:paddingLeft="@dimen/padding_left_input_text"
                android:orientation="vertical">

                <!-- Add photo picker later -->

                <!-- Cookie name field -->
                <EditText
                    android:id="@+id/edit_cookie_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cookie_name"
                    android:inputType="textCapSentences"
                    style="@style/EditorFieldStyle"/>

                <!-- Cookie description field -->
                <EditText
                    android:id="@+id/edit_cookie_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cookie_description_hint"
                    android:inputType="textCapSentences|textMultiLine"
                    style="@style/EditorFieldStyle"
                    android:gravity="top"/>

                <!-- Cookie price field -->
                <RelativeLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:paddingLeft="@dimen/padding_left_input_text">

                    <EditText
                        android:id="@+id/edit_cookie_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cookie_price"
                        android:inputType="numberDecimal"
                        style="@style/EditorFieldStyle"/>

                    <!-- Chosen currency (SEK) -->
                    <TextView
                        android:id="@+id/label_weight_units"
                        android:text="@string/currency"
                        style="@style/EditorUnitsStyle"/>
                </RelativeLayout>

                <!-- Cookie quantity field -->

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:text="@string/button_fewer_cookies"
                        android:background="@color/colorAccent"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_size_button_labels"
                        android:gravity="center"
                        android:layout_marginRight="@dimen/margin_buttons"/>

                    <EditText
                        android:id="@+id/edit_cookie_quantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cookie_quantity"
                        android:inputType="number"
                        style="@style/EditorFieldStyle"/>

                    <Button
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:text="@string/button_more_cookies"
                        android:background="@color/colorAccent"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_size_button_labels"
                        android:gravity="center"
                        android:layout_marginRight="@dimen/margin_buttons"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <!-- Cookie type -->
        <LinearLayout
            android:id="@+id/container_cookie_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/margin_horizontal">

            <!-- Label -->
            <TextView
                android:text="@string/cookie_type"
                style="@style/CategoryStyle" />

            <!-- Input field -->
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <!-- Type drop-down spinner -->
                <Spinner
                    android:id="@+id/spinner_cookie_type"
                    android:layout_height="@dimen/layout_height_spinner"
                    android:layout_width="wrap_content"
                    android:paddingRight="@dimen/padding_right_spinner"
                    android:spinnerMode="dropdown"/>
            </LinearLayout>
        </LinearLayout>

        <!-- Supplier info -->
        <LinearLayout
            android:id="@+id/container_supplier_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/margin_horizontal">

            <!-- Label -->
            <TextView
                android:text="@string/supplier_info"
                style="@style/CategoryStyle" />

            <!-- Input fields -->
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:paddingLeft="@dimen/padding_left_input_text"
                android:orientation="vertical">

                <!-- Supplier name field -->
                <EditText
                    android:id="@+id/edit_cookie_supplier_name"
                    android:hint="@string/supplier_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    style="@style/EditorFieldStyle"/>

                <!-- Supplier phone number field -->
                <EditText
                    android:id="@+id/edit_cookie_supplier_phone"
                    android:hint="@string/supplier_phone_nr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    style="@style/EditorFieldStyle"/>

                <!-- Supplier phone e-mail field -->
                <EditText
                    android:id="@+id/edit_cookie_supplier_email"
                    android:hint="@string/supplier_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    style="@style/EditorFieldStyle"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!-- Container for contents of drawer -
        use NavigationView to make configuration easier -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_view"
        app:headerLayout="@layout/nav_header" />

</android.support.v4.widget.DrawerLayout>

