<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/backgroundColorWithTransparency"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <!-- CardView tutorial from https://medium.com/@nileshsingh/
        android-cardview-101-everything-you-should-know-5bbf1c873f5a,
        inspired by https://discussions.udacity.com/t/solved-cannot
        -edit-cookie-after-adding-the-buy-me-button/820188 -->

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/white"
            android:layout_marginTop="@dimen/margin_top_cardview"
            android:layout_marginLeft="@dimen/margin_horizontal"
            android:layout_marginRight="@dimen/margin_horizontal"
            android:layout_marginBottom="@dimen/cardview_margin_bottom"
            app:cardCornerRadius="@dimen/corner_radius"
            app:cardElevation="@dimen/card_elevation"
            app:cardMaxElevation="@dimen/max_card_elevation"
            app:contentPaddingBottom="@dimen/padding_bottom_content_about"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cookie_about" />

                <TextView
                    android:id="@+id/about_headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_content_about"
                    android:layout_marginLeft="@dimen/padding_content_about"
                    android:text="@string/about_label"
                    style="@style/MainHeadline"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_content_paragraph_1"
                    android:layout_marginTop="@dimen/margin_top_content_about"
                    android:layout_marginLeft="@dimen/padding_content_about"
                    android:layout_marginRight="@dimen/padding_content_about"
                    android:textColor="@color/colorAccent"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_content_paragraph_2"
                    android:layout_marginTop="@dimen/margin_top_content_about"
                    android:layout_marginLeft="@dimen/padding_content_about"
                    android:layout_marginRight="@dimen/padding_content_about"
                    android:textColor="@color/colorAccent"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_content_paragraph_3"
                    android:layout_marginTop="@dimen/margin_top_content_about"
                    android:layout_marginLeft="@dimen/padding_content_about"
                    android:layout_marginRight="@dimen/padding_content_about"
                    android:textColor="@color/colorAccent"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_content_paragraph_4"
                    android:layout_marginTop="@dimen/margin_top_content_about"
                    android:layout_marginLeft="@dimen/padding_content_about"
                    android:layout_marginRight="@dimen/padding_content_about"
                    android:textColor="@color/colorAccent"/>

            </LinearLayout>


        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/footer_margin_vertical"
            android:layout_marginBottom="@dimen/footer_margin_vertical">

            <!-- Padding button so that the TextView and ImageView can
            align vertically -->
            <TextView
                android:id="@+id/footer_text_part_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_content_about"
                android:paddingBottom="@dimen/padding_content_about"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/footer_text_size"
                tools:text="Footer"/>

            <ImageView
                android:id="@+id/footer_heart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                tools:src="@drawable/icon_heart"/>

            <TextView
                android:id="@+id/footer_text_part_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_content_about"
                android:paddingBottom="@dimen/padding_content_about"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/footer_text_size"
                tools:text="Footer"/>

        </LinearLayout>

    </LinearLayout>


</ScrollView>

